Improvise date picker and add png, pdf fucntionalities

--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^7.2.1",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^13.5.0",
@@ -50,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.7"
   }
 }
